make it pizzaroo

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizza App</title>
+    <title>Pizzaroo</title>
 
+    <link rel="icon" href="/public/favicon.ico" type="image/x-icon" />
+
+    <meta
+      name="description"
+      content="Pizzaroo is a sample app for demonstration purposes only, not intended for commercial use."
+    />
     <link href="/public/style.css" rel="stylesheet" />
   </head>
   <body>
