add opengraph tags

--- a/index.html
+++ b/index.html
@@ -3,14 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Pizzaroo</title>
 
-    <link rel="icon" href="/public/favicon.ico" type="image/x-icon" />
-
+    <!-- HTML Meta Tags -->
     <meta
       name="description"
       content="Pizzaroo is a sample app for demonstration purposes only, not intended for commercial use."
     />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://pizza-app-alpha-brown.vercel.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Pizzaroo" />
+    <meta
+      property="og:description"
+      content="Pizzaroo is a sample app for demonstration purposes only, not intended for commercial use."
+    />
+    <meta
+      property="og:image"
+      content="https://opengraph.b-cdn.net/production/images/ba18e9ab-e1d9-480d-b6d6-f1359ac9861a.png?token=tyHa0EV9vGm7DJs4MNKhuvWQFZFciP0gNoK_Y9jf-nc&height=675&width=1200&expires=33267431185"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:domain"
+      content="pizza-app-alpha-brown.vercel.app"
+    />
+    <meta
+      property="twitter:url"
+      content="https://pizza-app-alpha-brown.vercel.app/"
+    />
+    <meta name="twitter:title" content="Pizzaroo" />
+    <meta
+      name="twitter:description"
+      content="Pizzaroo is a sample app for demonstration purposes only, not intended for commercial use."
+    />
+    <meta
+      name="twitter:image"
+      content="https://opengraph.b-cdn.net/production/images/ba18e9ab-e1d9-480d-b6d6-f1359ac9861a.png?token=tyHa0EV9vGm7DJs4MNKhuvWQFZFciP0gNoK_Y9jf-nc&height=675&width=1200&expires=33267431185"
+    />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <link rel="icon" href="/public/favicon.ico" type="image/x-icon" />
     <link href="/public/style.css" rel="stylesheet" />
   </head>
   <body>
